feat: Add rent car
User can rent a car with source and destination

--- a/html/User-profilepage.html
+++ b/html/User-profilepage.html
@@ -14,31 +14,31 @@
     <!--<link rel="stylesheet" href="../css/normalize.css">-->
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <!--<script src="../js/vendor/modernizr-2.8.3.min.js"></script>-->
-    <!--<script src="../js/bootstrap.js"></script>-->
+    <script src="../js/vendor/modernizr-2.8.3.min.js"></script>
+    <script src="../js/bootstrap.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <title>TC</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
-    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">-->
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">-->
-    <!--<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">-->
-    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">-->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 
-    <!--<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">-->
-    <!--<link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">-->
-    <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>-->
-    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <style>
 
@@ -550,65 +550,65 @@
                 <div class="w3-content container" style=" text-align: center ;  ">
                     <div class="w3-row-padding row" id="CarList">
                         <!--<div class="w3-half w3-margin-bottom col-sm-4">-->
-                            <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Norway" style="width:100%">-->
-                            <!--<div class="w3-container w3-white">-->
-                                <!--<h3 class="name1"></h3>-->
-                                <!--<h4 class="company1"></h4>-->
-                                <!--<p class="w3-opacity cost1"></p>-->
-                                <!--<p class="kilometer1"></p>-->
-                                <!--<button class="w3-button w3-margin-bottom" id="rent1">Rent</button>-->
-                            <!--</div>-->
+                        <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Norway" style="width:100%">-->
+                        <!--<div class="w3-container w3-white">-->
+                        <!--<h3 class="name1"></h3>-->
+                        <!--<h4 class="company1"></h4>-->
+                        <!--<p class="w3-opacity cost1"></p>-->
+                        <!--<p class="kilometer1"></p>-->
+                        <!--<button class="w3-button w3-margin-bottom" id="rent1">Rent</button>-->
+                        <!--</div>-->
                         <!--</div>-->
 
                         <!--<div class="w3-half w3-margin-bottom col-sm-4">-->
-                            <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">-->
-                            <!--<div class="w3-container w3-white">-->
-                                <!--<h3 class="name2"></h3>-->
-                                <!--<h4 class="company2"></h4>-->
-                                <!--<p class="w3-opacity cost2"></p>-->
-                                <!--<p class="kilometer2"></p>-->
-                                <!--<button class="w3-button w3-margin-bottom" id="rent2">Rent</button>-->
-                            <!--</div>-->
+                        <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">-->
+                        <!--<div class="w3-container w3-white">-->
+                        <!--<h3 class="name2"></h3>-->
+                        <!--<h4 class="company2"></h4>-->
+                        <!--<p class="w3-opacity cost2"></p>-->
+                        <!--<p class="kilometer2"></p>-->
+                        <!--<button class="w3-button w3-margin-bottom" id="rent2">Rent</button>-->
+                        <!--</div>-->
                         <!--</div>-->
                         <!--<div class="w3-half w3-margin-bottom col-sm-4">-->
-                            <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">-->
-                            <!--<div class="w3-container w3-white">-->
-                                <!--<h3 class="name3"></h3>-->
-                                <!--<h4 class="company3"></h4>-->
-                                <!--<p class="w3-opacity cost3"></p>-->
-                                <!--<p class="kilometer3"></p>-->
-                                <!--<button class="w3-button w3-margin-bottom" id="rent3">Rent</button>-->
-                            <!--</div>-->
+                        <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">-->
+                        <!--<div class="w3-container w3-white">-->
+                        <!--<h3 class="name3"></h3>-->
+                        <!--<h4 class="company3"></h4>-->
+                        <!--<p class="w3-opacity cost3"></p>-->
+                        <!--<p class="kilometer3"></p>-->
+                        <!--<button class="w3-button w3-margin-bottom" id="rent3">Rent</button>-->
+                        <!--</div>-->
                         <!--</div>-->
                         <!--<div class="w3-half w3-margin-bottom col-sm-4">-->
-                            <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Norway" style="width:100%">-->
-                            <!--<div class="w3-container w3-white">-->
-                                <!--<h3 class="name4"></h3>-->
-                                <!--<h4 class="company4"></h4>-->
-                                <!--<p class="w3-opacity cost4"></p>-->
-                                <!--<p class="kilometer4"></p>-->
-                                <!--<button class="w3-button w3-margin-bottom" id="rent4">Rent</button>-->
-                            <!--</div>-->
+                        <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Norway" style="width:100%">-->
+                        <!--<div class="w3-container w3-white">-->
+                        <!--<h3 class="name4"></h3>-->
+                        <!--<h4 class="company4"></h4>-->
+                        <!--<p class="w3-opacity cost4"></p>-->
+                        <!--<p class="kilometer4"></p>-->
+                        <!--<button class="w3-button w3-margin-bottom" id="rent4">Rent</button>-->
+                        <!--</div>-->
                         <!--</div>-->
                         <!--<div class="w3-half w3-margin-bottom col-sm-4">-->
-                            <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">-->
-                            <!--<div class="w3-container w3-white">-->
-                                <!--<h3 class="name5"></h3>-->
-                                <!--<h4 class="company5"></h4>-->
-                                <!--<p class="w3-opacity cost5"></p>-->
-                                <!--<p class="kilometer5"></p>-->
-                                <!--<button class="w3-button w3-margin-bottom" id="rent5">Rent</button>-->
-                            <!--</div>-->
+                        <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">-->
+                        <!--<div class="w3-container w3-white">-->
+                        <!--<h3 class="name5"></h3>-->
+                        <!--<h4 class="company5"></h4>-->
+                        <!--<p class="w3-opacity cost5"></p>-->
+                        <!--<p class="kilometer5"></p>-->
+                        <!--<button class="w3-button w3-margin-bottom" id="rent5">Rent</button>-->
+                        <!--</div>-->
                         <!--</div>-->
                         <!--<div class="w3-half w3-margin-bottom col-sm-4">-->
-                            <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">-->
-                            <!--<div class="w3-container w3-white">-->
-                                <!--<h3 class="name6"></h3>-->
-                                <!--<h4 class="company6"></h4>-->
-                                <!--<p class="w3-opacity cost6"></p>-->
-                                <!--<p class="kilometer6"></p>-->
-                                <!--<button class="w3-button w3-margin-bottom" id="rent6">Rent</button>-->
-                            <!--</div>-->
+                        <!--<img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">-->
+                        <!--<div class="w3-container w3-white">-->
+                        <!--<h3 class="name6"></h3>-->
+                        <!--<h4 class="company6"></h4>-->
+                        <!--<p class="w3-opacity cost6"></p>-->
+                        <!--<p class="kilometer6"></p>-->
+                        <!--<button class="w3-button w3-margin-bottom" id="rent6">Rent</button>-->
+                        <!--</div>-->
                         <!--</div>-->
                     </div>
                 </div>
