fix: Edit admin page linked urls

--- a/html/Adminpage.html
+++ b/html/Adminpage.html
@@ -67,17 +67,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand page-scroll myInfo" href="" style="color: darkred">TehranCar</a>
+        <a class="navbar-brand page-scroll myInfo" id="homeButt" style="color: darkred">TehranCar</a>
     </div>
 
     <div class="collapse navbar-collapse navbar-ex1-collapse">
         <ul class="nav navbar-nav">
             <li>
-                <a class="page-scroll" href="AdminUserList.html"><span class="glyphicon glyphicon-user "
+                <a class="page-scroll" id="users"><span class="glyphicon glyphicon-user "
                                                            style="padding-right: 3px"></span>List of User</a>
             </li>
             <li>
-                <a class="page-scroll" href="#page1"><span class="glyphicon glyphicon-upload"
+                <a class="page-scroll" id="addCar"><span class="glyphicon glyphicon-upload"
                                                            style="padding-right: 3px"></span>Add car</a>
             </li>
         </ul>
