fix: Edit inputs name

--- a/html/AdminAddCar.html
+++ b/html/AdminAddCar.html
@@ -154,15 +154,15 @@
 
 
                 <!-- part of add thr info -->
-                <input type="text" name="Car-name" placeholder="Car name">
-                <input type="text" name="Car-company" placeholder="Car company">
+                <input type="text" name="car-name" placeholder="Car name">
+                <input type="text" name="car-company" placeholder="Car company">
                 <input type="text" name="year" placeholder="Year of manufacture of your car?!">
                 <!--<input type="text" name="gender" placeholder="Gender">-->
                 <select name="automate">
                     <option value="automate">automate</option>
                     <option value="manual">manual</option>
                 </select>
-                <input type="text" name="Cost" placeholder="Cost ...">
+                <input type="text" name="price" placeholder="Cost ...">
                 <input type="text" name="color" placeholder="Color of your car">
                 <input type="text" name="kilometer" placeholder="Kilometer">
                 <input type="text" name="description" placeholder="About your car...">
@@ -194,6 +194,7 @@
 
 </SCRIPT>
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
+<script src="../js/vendor/jquery-UI.js"></script>
 <script src="../js/vendor/jquery.cookie.js"></script>
 <script src="../js/const.js"></script>
 <script src="../js/Admin.js"></script>
