--- a/html/profilePage.html
+++ b/html/profilePage.html
@@ -234,6 +234,7 @@
 <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js'></script>
 
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
+<script src="../js/vendor/jquery-UI.js"></script>
 <script src="../js/vendor/jquery.cookie.js"></script>
 <script src="../js/const.js"></script>
 <script src="../js/ProfilePage.js"></script>
