fix: Edit admin js add car

--- a/html/Adminpage.html
+++ b/html/Adminpage.html
@@ -35,7 +35,7 @@
 
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
     <STYLE>
         @font-face {
             font-family: "MyFont";
@@ -82,7 +82,7 @@
             </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
-            <li><a href="" class="page-scroll" style="padding-right: 25px!important;"><span
+            <li><a id="logout" class="page-scroll" style="padding-right: 25px!important;"><span
                     class="glyphicon glyphicon-log-out" style="padding-right: 3px"></span>Log out</a></li>
         </ul>
     </div>
@@ -166,7 +166,7 @@
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
 <script src="../js/vendor/jquery.cookie.js"></script>
 <script src="../js/const.js"></script>
-<script src="../js/Admin.js"></script>
+
 </body>
 </html>
 
