fix: Edit add car json

--- a/html/AdminAddCar.html
+++ b/html/AdminAddCar.html
@@ -112,7 +112,7 @@
                         User</a>
                 </li>
                 <li>
-                    <a class="page-scroll" ><span class="fas fa-car-side"
+                    <a class="page-scroll" id="cars"><span class="fas fa-car-side"
                                                                style="padding-right: 3px"></span>List of car</a>
                 </li>
             </ul>
