fix: make user list dynamic

--- a/html/AdminUserList.html
+++ b/html/AdminUserList.html
@@ -98,13 +98,13 @@
         <div class="row content">
             <div class="col-sm-2 ">
             </div>
-            <div class="col-sm-8 text-left" style="padding-top: 100px">
-                <button class="accordion">Ali Omidvar</button>
+            <div class="col-sm-8 text-left" style="padding-top: 100px" id="UserList">
+                <!--<button class="accordion">Ali Omidvar</button>
                 <div class="panel">
-                    <!-- <div class="col-sm-5">
+                    &lt;!&ndash; <div class="col-sm-5">
                          <div class="well">
                          </div>
-                     </div>-->
+                     </div>&ndash;&gt;
                     <hr>
                     <p style="padding-top: 7px"><span class="glyphicon glyphicon-user" style="padding-right: 3px"></span>Name : Ali</p>
                     <hr>
@@ -241,7 +241,7 @@
                     <button class="btn btn-danger "><span
                             class="glyphicon glyphicon-remove" style="padding-right: 3px"></span>Delete</button>
                     <hr>
-                </div>
+                </div>-->
             </div>
             <div class="col-sm-2 sidenav">
 
