fix: make car list dynamic

--- a/html/Adminpage.html
+++ b/html/Adminpage.html
@@ -89,14 +89,14 @@
 </div>
 </nav>
 <section class="" id="page0" style="background-color: #222 ; height: 100%; padding-top: 10px; padding-bottom: 10px">
-    <div >
+    <div>
         <div class="">
             <br>
             <br>
             <h1 style="text-align: center ; color: darkred" class="myInfo">List of Car</h1>
             <div class="w3-content" style="max-width:1100px; margin-left: 17% ; text-align: center">
-                <div class="w3-row-padding">
-                    <div class="w3-half w3-margin-bottom column1">
+                <div class="w3-row-padding" id="CarList">
+                    <!--<div class="w3-half w3-margin-bottom column1">
                         <img src="../img/6572131-tehran-wallpapers.jpg" alt="Norway" style="width:100%">
                         <div class="w3-container w3-white">
                             <h3>KIA,sportage</h3>
@@ -123,38 +123,7 @@
                             <p>Km : 1000</p>
                             <button class="w3-button w3-margin-bottom">Profile</button>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-content" style="max-width:1100px; margin-left: 17%; text-align: center">
-                <div class="w3-row-padding">
-                    <div class="w3-half w3-margin-bottom column1">
-                        <img src="../img/6572131-tehran-wallpapers.jpg" alt="Norway" style="width:100%">
-                        <div class="w3-container w3-white">
-                            <h3>iran khodro, dana</h3>
-                            <p class="w3-opacity">Cost: $7900</p>
-                            <p>Km : 1000</p>
-                            <button class="w3-button w3-margin-bottom">Profile</button>
-                        </div>
-                    </div>
-                    <div class="w3-half w3-margin-bottom column1">
-                        <img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">
-                        <div class="w3-container w3-white">
-                            <h3>saipa,131</h3>
-                            <p class="w3-opacity">Cost: $540</p>
-                            <p>Km : 1000</p>
-                            <button class="w3-button w3-margin-bottom">Profile</button>
-                        </div>
-                    </div>
-                    <div class="w3-half w3-margin-bottom column1">
-                        <img src="../img/6572131-tehran-wallpapers.jpg" alt="Austria" style="width:100%">
-                        <div class="w3-container w3-white">
-                            <h3>mazda , 3 new</h3>
-                            <p class="w3-opacity">Cost: $400</p>
-                            <p>Km : 1000</p>
-                            <button class="w3-button w3-margin-bottom">Profile</button>
-                        </div>
-                    </div>
+                    </div>-->
                 </div>
             </div>
         </div>
