feat: Add uploading car's photo
Admins and users can add photo of their car while adding car

--- a/html/AdminAddCar.html
+++ b/html/AdminAddCar.html
@@ -141,12 +141,13 @@
                 <div class="container">
                     <div class="upload-img">
                         <div class="img-edit">
-                            <input type='file' id="imageUpload" accept=".png, .jpg, .jpeg , .tiff" />
+                            <input type='file' id="imageUpload" onchange="readURL(this);" accept=".png, .jpg, .jpeg , .tiff" />
                             <label for="imageUpload" class=" "><span
                                     class="glyphicon glyphicon-camera" style="padding-right: 3px ; margin-top: 8px ; margin-left: 1px"></span></label>
                         </div>
                         <div class="img-preview">
                             <div id="imagePreview" style="background-image: url(../img/upload.png);">
+                                <img id="myImg" src="" alt="">
                             </div>
                         </div>
                     </div>
@@ -174,25 +175,6 @@
 
 </section>
 
-<SCRIPT>
-    // for upload photo
-    
-    // function readURL(input) {
-    //     if (input.files && input.files[0]) {
-    //         var reader = new FileReader();
-    //         reader.onload = function(e) {
-    //             $('#imagePreview').css('background-image', 'url('+e.target.result +')');
-    //             $('#imagePreview').hide();
-    //             $('#imagePreview').fadeIn(650);
-    //         }
-    //         reader.readAsDataURL(input.files[0]);
-    //     }
-    // }
-    // $("#imageUpload").change(function() {
-    //     readURL(this);
-    // });
-
-</SCRIPT>
 <script src="../js/vendor/jquery-3.3.1.min.js"></script>
 <script src="../js/vendor/jquery-UI.js"></script>
 <script src="../js/vendor/jquery.cookie.js"></script>
