--- a/html/AdminCarProfile.html
+++ b/html/AdminCarProfile.html
@@ -28,7 +28,7 @@
             <p id="myName"></p>
         </div>
         <div class="well">
-            <img src="../img/mohamad-rashidi-717605-unsplash.jpg" style="height: 250px ; width: 300px">
+            <img id="myImage" style="height: 250px ; width: 300px">
         </div>
         <div class="row">
             <div class="col-sm-12">
