feat: User can see the info of rent car.

--- a/html/User-profilepage.html
+++ b/html/User-profilepage.html
@@ -457,6 +457,23 @@
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Rent INFO
+                    <span class="caret"></span></a>
+                <ul class="dropdown-menu" style="padding-right: 2px ; padding-left: 1px;">
+                    <li><p href="#">Car Name:</p></li>
+                    <hr>
+                    <li><p href="#">User Name:</p></li>
+                    <hr>
+                    <li><p href="#">Pick up date:</p></li>
+                    <hr>
+                    <li><p href="#">deliver date:</p></li>
+                    <hr>
+                    <li><p href="#">Cost:</p></li>
+                    <hr>
+
+                </ul>
+            </li>
             <li><a id="myCarList"> <span
                     class="glyphicon glyphicon-list "></span> List of my cars</a></li>
             <li><a id="myAddCar"><span
