fix : height of photo fixed.

--- a/html/User-profilepage.html
+++ b/html/User-profilepage.html
@@ -436,7 +436,10 @@
             background-color: #ac2925 !important;
             border-color: #ac2925 !important;
         }
+        .pic{
+            height:230px;
 
+        }
 
     </style>
 
