feat : User cad add a driver to there rent.

--- a/html/profilePage.html
+++ b/html/profilePage.html
@@ -131,11 +131,18 @@
                 <div class="fallbackDatePicker"></div>
             </form>
             <hr class="col-md-11" style="color: darkred !important;">
+            <div class="col-md-12 label1">
+            <label >
+                <h4><span class="glyphicon glyphicon-user"></span>Do you need a ?!</h4>
+                <input type="checkbox" checked="checked" name="sameadr">
+            </label>
+            </div>
         </div>
 
 
+
         <input type="button" name="next" id="rent" class="next action-button col-md-3" style="float: inherit"
-               value="Next"/>
+               value="Rent"/>
     </fieldset>
     <fieldset>
 
